# pixie-privy

./: .gitignore
demos/: BUILD.bazel  crd.yaml  k8ssandra-control-plane.yaml  manifest.json  python-demo.yaml  temp.json
k8s/cloud/overlays/plugin_job/: plugin_job.yaml
skaffold/: skaffold_vizier.yaml
src/api/proto/cloudpb/: cloudapi.pb.go
src/api/proto/vizierconfigpb/: vizier_types.pb.go
src/api/proto/vizierpb/: vizierapi.pb.go
src/carnot/planner/: logical_planner_test.cc
src/carnot/planner/compiler/: compiler.cc
src/carnot/planner/distributedpb/: distributed_plan.pb.go
src/carnot/planner/plannerpb/: service.pb.go
src/carnot/planner/probes/: probes.cc  probes.h  probes_test.cc  tracing_module.cc  tracing_module.h
src/carnot/planpb/: plan.pb.go
src/carnot/queryresultspb/: query_results.pb.go
src/cloud/auth/schema/: bindata.gen.go
src/cloud/config_manager/configmanagerpb/: service.pb.go
src/cloud/cron_script/schema/: bindata.gen.go
src/cloud/plugin/pluginpb/: service.pb.go
src/cloud/plugin/schema/: bindata.gen.go
src/cloud/profile/schema/: bindata.gen.go
src/cloud/project_manager/schema/: bindata.gen.go
src/cloud/vzmgr/schema/: bindata.gen.go
src/common/base/: inet_utils.cc
src/common/system/: kernel_version.cc  kernel_version.h  kernel_version_test.cc
src/common/system/testdata/: BUILD.bazel
src/datagen/pii/privy/: .gitignore  requirements.txt
src/datagen/pii/privy/privy/evaluate/: BUILD.bazel  convert_dataset.py  entity_mappings.py  eval_flair.py  eval_presidio.py  eval_spacy.py  utils.py
src/e2e_test/perf_tool/experimentpb/: experiment.pb.go
src/pixie_cli/pkg/cmd/: bindata.gen.go
src/pxl_scripts/px/tcp_drops/: data.pxl
src/shared/cvmsgspb/: cvmsgs.pb.go
src/shared/k8s/metadatapb/: metadata.pb.go
src/stirling/: stirling.cc
src/stirling/bpf_tools/: bcc_wrapper.cc  bcc_wrapper.h  bpftrace_wrapper_bpf_test.cc
src/stirling/bpf_tools/rr/: BUILD.bazel  other-program  other-program.cc  rr_bpf_test.cc
src/stirling/e2e_tests/: BUILD.bazel  fd_leak_bpf_test.cc  stirling_wrapper_size_test.cc
src/stirling/utils/: BUILD.bazel  binary_decoder.h  linux_headers.cc  linux_headers.h  linux_headers_test.cc  parse_state.h  proc_path_tools.cc  proc_path_tools.h  proc_path_tools_test.cc
src/table_store/schemapb/: schema.pb.go
src/utils/: uuid.go
(+122 files in other folders)
