# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//privy:__subpackages__"])

py_library(
    name = "privy_evaluate",
    testonly = True,
    srcs = glob([
        "*.py",
        "**/*.py",
    ]),
    srcs_version = "PY3",
)

py_binary(
    name = "privy_convert",
    testonly = True,
    srcs = [
        "convert_dataset.py",
    ],
    main = "convert_dataset.py",
    srcs_version = "PY3",
    deps = [
        "//privy:privy_library",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "privy_eval_presidio",
    testonly = True,
    srcs = [
        "eval_presidio.py",
    ],
    main = "eval_presidio.py",
    srcs_version = "PY3",
    deps = [
        "//privy:privy_library",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "privy_eval_spacy",
    testonly = True,
    srcs = [
        "eval_spacy.py",
    ],
    main = "eval_spacy.py",
    srcs_version = "PY3",
    deps = [
        "//privy:privy_library",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "privy_eval_flair",
    testonly = True,
    srcs = [
        "eval_flair.py",
    ],
    main = "eval_flair.py",
    srcs_version = "PY3",
    deps = [
        "//privy:privy_library",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "utils",
    testonly = True,
    srcs = [
        "utils.py",
    ],
    main = "utils.py",
    srcs_version = "PY3",
    deps = [
        "//privy:privy_library",
        "@rules_python//python/runfiles",
    ],
)
